--- a/weapp/apps/customerized_apps/group/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/group/templates/editor/workbench.html
@@ -100,6 +100,14 @@
         #start_time,#end_time{
           cursor: pointer;
         }
+
+        .xa-productList td{
+            border: none !important;
+        }
+
+        .mmg30{
+            margin-bottom: -30px;
+        }
     </style>
 {% endblock %}
 {% block content-panel %}
