--- a/weapp/apps/customerized_apps/group/templates/webapp/m_group_list.html
+++ b/weapp/apps/customerized_apps/group/templates/webapp/m_group_list.html
@@ -28,7 +28,7 @@
         height: 145px;
         border-radius: 5px;
         display: inline-block;
-        margin: 10px;
+        margin: 10px 10px 10px 5%;
     }
 
     .wui-swiper-slide .xui-listInner .xui-i-content .xui-i-imgBox img{
@@ -77,8 +77,8 @@
     }
     .wui-swiper-slide .xui-listInner .xui-i-title{
         text-align: left;
-        margin: 0px 10px;
-        padding-bottom: 10px;
+        margin: -10px 0px 10px 5%;
+        padding-bottom: 15px;
     }
 
     .xui-listInner .ui-btn-inner{
@@ -87,7 +87,7 @@
 
     .xui-all_groups_can_join-slide .xui-listInner{
         text-align: center;
-        height: 100px;
+        height: 82px;
         padding: 0px;
         position: relative;
     }
