--- a/weapp/termite/static/termite_js/app/component/appkit/groupdescription/groupdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/groupdescription/groupdescription.html
@@ -80,9 +80,9 @@
 
                     </div>
                     <div class="wui-i-group_box_progress none">
-                        <span style="font-weight:bold;font-size: 1.1rem;">团购进度</span>
-                        <span class="wui-i-group_box_success none" style="color: #ff2742;margin-left: 18%;font-weight:bold;font-size: 1.1rem;">团购成功！</span>
-                        <span class="wui-i-group_box_fail none" style="margin-left: 18%;font-weight:bold;font-size: 1.1rem;">团购失败！</span>
+                        <span style="font-size: 1.1rem;">团购进度</span>
+                        <span class="wui-i-group_box_success none" style="color: #ff2742;margin-left: 18%;font-size: 1.1rem;">团购成功！</span>
+                        <span class="wui-i-group_box_fail none" style="margin-left: 18%;font-size: 1.1rem;">团购失败！</span>
                         <div class="wui-i-timing wa-timing none">
                             <b class="xa-day">{% if component.model.timing_value.day %}{{component.model.timing_value.day}}{% else %}99{% endif %}</b>天
                             <b class="xa-hour">{% if component.model.timing_value.hour %}{{component.model.timing_value.hour}}{% else %}23{% endif %}</b>时
