--- a/weapp/apps/customerized_apps/group/templates/webapp/m_group_list.html
+++ b/weapp/apps/customerized_apps/group/templates/webapp/m_group_list.html
@@ -228,7 +228,7 @@
                         <li data-icon="true" class="xui-listInner">
                             <div class="xui-i-title">
                                 <img src="{ product_img }" class="xui-i-content-img mt10">
-                                <div style="display: inline-block;">
+                                <div style="display: inline-block;margin-top: 22px;width: 47%;">
                                     <div class="xui-i-content-remain_hours">剩余{remain_hours}小时</div>
                                     <p style="color: #5E5E5E;">{ group_owner_name }</p>
                                     <div>的{ group_name }</div>
@@ -236,7 +236,7 @@
                                 </div>
                                 <div>
                                     <div style="display: inline-block;margin-top: 10px;margin-left: 10px;">
-                                        <p style="margin-bottom: 5px;text-align: center;width: 40px;">团员</p>
+                                        <p style="margin-bottom: 5px;text-align: center;width: 33px;">团员</p>
                                         <span style="background: #4A4A4A;color: #fff;padding: 5px;border-radius: 5px;top: 5px;">{participant_count}</span>
                                     </div>
                                     <div class="xui-i-content-title_box">
