同步供应商名称问题

--- a/weapp/mall/templates/mall/editor/edit_product.html
+++ b/weapp/mall/templates/mall/editor/edit_product.html
@@ -59,7 +59,7 @@
 			<div class="form-group">
 				<label class="control-label fl star_show" for="supplier">供货商：</label>
 				<div class="fl">
-            <select disabled="disabled" class="w106 ml5" id="supplier" style="white-space: nowrap;">
+            <select disabled="disabled" class="w106 ml5" id="supplier" style="white-space: nowrap;" data-store-name="{{store_name}}" title="{{store_name}}">
 						<option value="{{ store_name }}">{{ store_name }}</option>
 					</select>
 				</div>
