--- a/weapp/apps/customerized_apps/group/templates/webapp/m_group_list.html
+++ b/weapp/apps/customerized_apps/group/templates/webapp/m_group_list.html
@@ -158,9 +158,7 @@
     }
     @media only screen
     and (min-device-width: 320px)
-    and (max-device-width: 480px)
-    and (-webkit-device-pixel-ratio: 2)
-    and (device-aspect-ratio: 2/3) {
+    and (max-device-width: 480px) {
         .xui-i-content-group-css{
             display: inline-block;
             margin-top: 35px;
