--- a/weapp/apps/customerized_apps/group/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/group/templates/editor/workbench.html
@@ -481,11 +481,11 @@
       }
 
       if(group_error_type.length>=1){
-          console.log('====== validate group start >>>>>>>');
+          // console.log('====== validate group start >>>>>>>');
           validate_group_type = group_error_type[0];
-          console.log('validate-type:'+validate_group_type);
-          console.log('validate-data:'+group_error_type);
-          console.log('====== validate group end <<<<<<<');
+          // console.log('validate-type:'+validate_group_type);
+          // console.log('validate-data:'+group_error_type);
+          // console.log('====== validate group end <<<<<<<');
       }
 
 
