--- a/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
+++ b/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
@@ -183,7 +183,7 @@
         <div class="xui-section xui-production-panel pt0 xa-production" style="border:0;">
             <div class="xui-section-title xui-section-item zoom">
                 <div class="wui-i-product-description-title pt10">滑动查看详情</div>
-                <div class="xui-productDetail-content rawHtml pt10 pl10 pb10 xa-productDetail-content none">
+                <div class="xui-productDetail-content rawHtml p10 xa-productDetail-content none">
                 {{ product_detail|safe }}
                 </div>
             </div>
@@ -196,7 +196,7 @@
 	var is_helped = true;
     var is_self_page = true;
     var is_group_leader = false;
-    var only_remain_one_day = false;
+    var remain_days = 0;
     var page_owner_member_id = '';
     var page_owner_icon = '';//用户头像
     var group_type = '';
@@ -236,66 +236,19 @@
         //展示商品详情
         var detail_content = $('.wui-i-product-description');
         $('.wui-i-body').append($(detail_content));
-        //返回角度
-        function GetSlideAngle(dx, dy) {
-          return Math.atan2(dy, dx) * 180 / Math.PI;
-        }
 
-        //根据起点和终点返回方向 1：向上，2：向下，3：向左，4：向右,0：未滑动
-        function GetSlideDirection(startX, startY, endX, endY) {
-          var dy = startY - endY;
-          var dx = endX - startX;
-          var result = 0;
-
-          //如果滑动距离太短
-          if(Math.abs(dx) < 2 && Math.abs(dy) < 2) {
-              return result;
-          }
-
-          var angle = GetSlideAngle(dx, dy);
-          if(angle >= -45 && angle < 45) {
-              result = 4;
-          }else if (angle >= 45 && angle < 135) {
-              result = 1;
-          }else if (angle >= -135 && angle < -45) {
-              result = 2;
-          }
-          else if ((angle >= 135 && angle <= 180) || (angle >= -180 && angle < -135)) {
-              result = 3;
-          }
-
-          return result;
-        }
-
-        //滑动处理
-        var startX, startY;
-        document.addEventListener('touchstart',function (ev) {
-          startX = ev.touches[0].pageX;
-          startY = ev.touches[0].pageY;
-        }, false);
-        document.addEventListener('touchend',function (ev) {
-          var endX, endY;
-          endX = ev.changedTouches[0].pageX;
-          endY = ev.changedTouches[0].pageY;
-          var direction = GetSlideDirection(startX, startY, endX, endY);
-          switch(direction) {
-              case 0:
-                  break;
-              case 1:
-                  if (product_id!=''){
-                      showProductDetails();
-                    }
-                  break;
-              case 2:
-                  break;
-              case 3:
-                  break;
-              case 4:
-                  break;
-              default:
-          }
-        }, false);
-
+        //下拉到底显示商品详情
+        document.addEventListener('touchstart',function () {
+            var $win = $(window);
+            var $top = $('.wui-i-product-description');
+            var rect = $top[0].getBoundingClientRect();
+            var djage = function(){
+                return rect.top<0 || rect.top >= 0 && ($win.height()-rect.top>=0);
+            };
+            if(rect && djage()){
+                showProductDetails();
+            }
+        });
     });
 	function GetQueryString(name){
         var reg = new RegExp("(^|&)"+ name +"=([^&]*)(&|$)");
@@ -303,12 +256,6 @@
         if(r!=null) return unescape(r[2]);
         return null;
     }
-//    function DelQueryString(name){
-//        var url = window.location.search.substr(1);
-//        var reg = new RegExp("(^|&)"+ name +"=([^&]*)(&|$)");
-//        console.log(url.replace(reg,""));
-//        return url.replace(reg,"");
-//    }
 
     //发送请求，单独获取动态数据，优化首页时间
     function getDynamicData(){
@@ -375,7 +322,7 @@
         W.member_id = member_info.member_id;
         is_self_page = member_info.self_page;
         is_group_leader = member_info.is_group_leader;
-        only_remain_one_day = member_info.only_remain_one_day;
+        remain_days = member_info.remain_days;
         is_helped = member_info.is_helped;
         page_owner_member_id = member_info.page_owner_member_id;
         W.group_status = member_info.group_status;
@@ -386,9 +333,11 @@
         product_group_price = member_info.product_group_price;
         page_owner_icon = member_info.page_owner_icon;
         order_id = member_info.order_id;
-        console.log(order_id);
         is_from_pay_result = member_info.is_from_pay_result;
         is_helper_unpaid = member_info.is_helper_unpaid;
+        if(member_info.group_relation_id !=''){
+            group_relation_id = member_info.group_relation_id;
+        }
         if (W.group_status == '团购进行中' && is_from_pay_result == true){
             showSuccessPaidWin()
         }
@@ -425,10 +374,6 @@
                     }else{
                         if(W.group_status == '团购未生效' && order_id !=''){
                             openUnpaidWin();
-                        }else{
-                            if(only_remain_one_day){
-                                openRemainOneDayWin();
-                            }
                         }
                         $('.wa-using-join').text('直接参团').on('click', openJoinGruop).show();
                         if(W.isMember){
@@ -488,30 +433,32 @@
         var choosen_group_price = $('.wui-i-choose_group_box').find('.radio-select').attr('data-input-group_price');
         var product_id = $('.wui-i-choose_group_box').find('.radio-select').attr('data-input-product_id');
         if (choosen_group_type){
-            W.getApi().call({
-                app: 'm/apps/group',
-                resource: 'group_participance',
-                method: 'post',
-                args: {
-                    webapp_owner_id: W.webappOwnerId,
-                    group_record_id: W.appRecordId,
-                    fid: W.member_id,
-                    group_type: choosen_group_type,
-                    group_days: choosen_group_days,
-                    group_price: choosen_group_price,
-                    product_id: product_id
-                },
-                success: function(data) {
-                    var relation_belong_to = data.relation_belong_to;
-                    var data_href = "http://"+settings_domain+"/mall/purchasing/?woid="+W.webappOwnerId+"&product_ids="+product_id+"&product_counts=1&product_model_names=standard&group_id="+relation_belong_to+"&activity_id="+W.appRecordId;
-                    window.location.href = data_href;
-                    console.log('data_href is:');
-                    console.log(data_href);
-                },
-                error: function(data) {
-                    wuiAlert(data.errMsg);
-                }
-            });
+            if(remain_days < parseInt(choosen_group_days)){
+                openRemainOneDayWin(choosen_group_type,choosen_group_days,choosen_group_price,product_id);
+            }else{
+                W.getApi().call({
+                    app: 'm/apps/group',
+                    resource: 'group_participance',
+                    method: 'post',
+                    args: {
+                        webapp_owner_id: W.webappOwnerId,
+                        group_record_id: W.appRecordId,
+                        fid: W.member_id,
+                        group_type: choosen_group_type,
+                        group_days: choosen_group_days,
+                        group_price: choosen_group_price,
+                        product_id: product_id
+                    },
+                    success: function(data) {
+                        var relation_belong_to = data.relation_belong_to;
+                        var data_href = "http://"+settings_domain+"/mall/purchasing/?woid="+W.webappOwnerId+"&product_ids="+product_id+"&product_counts=1&product_model_names=standard&group_id="+relation_belong_to+"&activity_id="+W.appRecordId;
+                        window.location.href = data_href;
+                    },
+                    error: function(data) {
+                        wuiAlert(data.errMsg);
+                    }
+                });
+            }
         }else{
             wuiAlert('请选择团购类型！');
         }
@@ -562,7 +509,6 @@
             //删除掉from=pay_result
             var link = window.location.origin + '/m/apps/group/m_group/?webapp_owner_id='+W.webappOwnerId+'&id='+W.appRecordId+'&fid='+page_owner_member_id+'&group_relation_id='+group_relation_id;
             window.location.href = link;
-//            window.location.href = "?"+DelQueryString("from");
         }
     });
     $('.xa-colseButton').click(function(){
@@ -586,12 +532,38 @@
         $('.xa-share').removeClass('none');
     }
     //开团时间不足提示
-    function openRemainOneDayWin(){
+    function openRemainOneDayWin(choosen_group_type,choosen_group_days,choosen_group_price,product_id){
         mask('show');
         $('.xui-groupMsg').removeClass('none');
         $('.xa-groupMsg').find('.xa-groupMsg-xui-i-msg-title').html('开团提示');
-        $('.xa-groupMsg').find('.xa-i-msg').html('本次团购剩余时间不足1天，是否继续开团？');
-        $('.wa-i-btn-groupMsg-yes,.wa-i-btn-groupMsg-no').click(function(){
+        $('.xa-groupMsg').find('.xa-i-msg').html('剩余开团时间不足，是否继续开团?');
+        $('.wa-i-btn-groupMsg-yes').click(function(){
+            mask('hide');
+            $('.xui-groupMsg').addClass('none');
+            W.getApi().call({
+                app: 'm/apps/group',
+                resource: 'group_participance',
+                method: 'post',
+                args: {
+                    webapp_owner_id: W.webappOwnerId,
+                    group_record_id: W.appRecordId,
+                    fid: W.member_id,
+                    group_type: choosen_group_type,
+                    group_days: choosen_group_days,
+                    group_price: choosen_group_price,
+                    product_id: product_id
+                },
+                success: function(data) {
+                    var relation_belong_to = data.relation_belong_to;
+                    var data_href = "http://"+settings_domain+"/mall/purchasing/?woid="+W.webappOwnerId+"&product_ids="+product_id+"&product_counts=1&product_model_names=standard&group_id="+relation_belong_to+"&activity_id="+W.appRecordId;
+                    window.location.href = data_href;
+                },
+                error: function(data) {
+                    wuiAlert(data.errMsg);
+                }
+            });
+        });
+        $('.wa-i-btn-groupMsg-no').click(function(){
             mask('hide');
             $('.xui-groupMsg').addClass('none');
         });
