--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
@@ -231,8 +231,8 @@
 			endYear: currYear + 10 //结束年份
 		};
 
-		$("#startDate").mobiscroll($.extend(opt['date'], opt['default']));
-		$("#endDate").mobiscroll($.extend(opt['date'], opt['default']));
+		$("#startDate").mobiscroll($.extend(opt['datetime'], opt['default']));
+		$("#endDate").mobiscroll($.extend(opt['datetime'], opt['default']));
 		console.log(22222);
 	});
 </script>
