--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
@@ -180,7 +180,7 @@
 {% endblock %}
 
 {% block js %}
-<!-- <script type="text/javascript" src="/termite_static/jquery/jquery-1.9.1.min.js"></script> -->
+<script type="text/javascript" src="/termite_static/jquery/jquery-1.9.1.min.js"></script>
 <script type="text/javascript" src="/termite_static/v3/mobile_datetime/mobiscroll_date.js"></script>
 <script type="text/javascript" src="/termite_static/v3/mobile_datetime/mobiscroll.js"></script>
 <script>
