--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
@@ -79,7 +79,7 @@
     	border-bottom: 1px solid #CCC;
     	height: 35px;
     	line-height: 30px;
-    	padding-right: 30px;
+    	/*padding-right: 30px;*/
     	overflow: hidden;
     }
     .xui-RecommendedDetailPage .xui-time .xui-time-wrap{
@@ -217,6 +217,7 @@
 			$(".xa-timeChoose").hide();
 			var startDate = $('#startDate').val();
 			var endDate = $('#endDate').val();
+			window.location.href = './?module=market_tool:channel_qrcode&model=settings_detail&action=get&webapp_owner_id={{request.webapp_owner_id}}&project_id=0&workspace_id=market_tool:channel_qrcode&sid={{setting.id}}&fmt={{member.token}}&startDate='+startDate+'&endDate='+endDate
 			$('.xui-time-content').text(startDate +' - '+ endDate);
 		})
 
