--- a/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
+++ b/weapp/market_tools/tools/channel_qrcode/templates/channel_qrcode/webapp/channel_qrcode_members.html
@@ -221,6 +221,14 @@
 		$(".xa-choose").click(function(){
 			$(".xa-RecommendedDetailPage").hide();
 			$(".xa-timeChoose").show();
+			var startDate = '{{startDate}}'.replaceAll('/','-');
+			var last_index_s = startDate.lastIndexOf('-');
+			startDate = startDate.substring(0,last_index_s) + ' ' + startDate.substring(last_index_s + 1,16);
+			var endDate = '{{endDate}}'.replaceAll('/','-');
+			var last_index_e = endDate.lastIndexOf('-');
+			endDate = endDate.substring(0,last_index_e) + ' ' + startDate.substring(last_index_e + 1,16);
+			$('#startDate').text(startDate);
+			$('#endDate').text(endDate);
 		})
 
 		$(".xa-submit").click(function(){
